--- a/src/components/tiptap-templates/simple/simple-editor.scss
+++ b/src/components/tiptap-templates/simple/simple-editor.scss
@@ -26,9 +26,9 @@ body,
   background-color: var(--tt-bg-color);
 }
 
-body {
-  overflow: hidden;
-}
+// body {
+//   overflow: hidden;
+// }
 
 .tiptap.ProseMirror {
   font-family: "DM Sans", sans-serif;
